--- a/Mk0.Software.OnlineUpdater/Mk0.Software.OnlineUpdater.csproj
+++ b/Mk0.Software.OnlineUpdater/Mk0.Software.OnlineUpdater.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F59DCD1B-931C-4A49-9D55-DEAA229218F6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Mk0.Software.OnlineUpdater</RootNamespace>
-    <AssemblyName>OnlineUpdater</AssemblyName>
+    <AssemblyName>Mk0.Software.OnlineUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
